[package]
name = "aiha"
version = "0.0.2"
edition = "2021"
authors = ["Thomas Chaigneau <t.chaigneau.tc@gmail.com>"]
description = "🦉 AIHA helps you to find the minimal requirements for any model on the 🤗 Hub."
homepage = "https://github.com/chainyo/aiha"
repository = "https://github.com/chainyo/aiha"
documentation = "https://doc.rs/aiha"
keywords = ["ai", "hardware", "advisor", "huggingface", "NLP"]
license = "Apache-2.0"
readme = "README.md"
exclude = [ "target/*", "Cargo.lock", "data/*" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "aiha"
crate-type = ["cdylib"]

[dependencies]
num_cpus = "1.15.0"
nvml-wrapper = "0.9.0"
percent-encoding = "2.2.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_derive = "1.0.163"
serde_json = "1.0.96"
tokio = { version="1.28.1", features=["full"] }
