[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "aiha"
version = "0.0.1"
description = "🦉 AIHA helps you to find the minimal requirements for any model on the 🤗 Hub."
author = { name = "Thomas Chaigneau", email = "t.chaigneau.tc@gmail.com" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
