# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "aiha"
version = "0.1.0"
authors = ["Thomas Chaigneau <t.chaigneau.tc@gmail.com>"]
edition = "2021"
description = "🦉 AIHA helps you to find the minimal requirements for any model on the 🤗 Hub."
homepage = "https://github.com/chainyo/aiha"
repository = "https://github.com/chainyo/aiha"
documentation = "https://doc.rs/aiha"
keywords = ["ai", "hardware", "advisor", "huggingface", "NLP"]
license = "Apache-2.0"
readme = "README.md"
exclude = [ "target/*", "Cargo.lock", "data/*" ]

[lib]
name = "aiha"
path = "src/lib.rs"
bench = false

[[bin]]
name = "aiha"
path = "src/cli.rs"
bench = false

[dependencies]
rust-gpu-tools = "0.7.1"

